#687 Minor fixes.
Specified border for search inputs in advanced search form and reduced size of checkbox labels. Otherwise the inputs and labels may not align properly depending on the browser and OS.

Added closing div in advanced_search.ctp.

--- a/app/webroot/css/sentences/search.css
+++ b/app/webroot/css/sentences/search.css
@@ -66,10 +66,14 @@ legend {
     display: inline-block;
 }
 
+#AdvancedSearchSearchForm input {
+    border: 1px solid #DDDDDD;
+}
+
 #AdvancedSearchSearchForm input + label {
     vertical-align: middle;
     display: inline-block;
-    width: 140px;
+    width: 50%;
 }
 
 #AdvancedSearchSearchForm input:first-child {
